# ai-proctor

./: .gitignore
hf/: main.py  pyproject.toml
livekit-voice-agent/: agent.py  cld.agent.py  gmni.agent.py  pyproject.toml
